# =============================================================================
#  R E P S   ·   source-lang
# =============================================================================
[package]
name    = "source-lang"
version = "0.2.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Source file and buffer management with multi-file source maps."

# Keywords (5 max)
keywords = ["compiler", "parser", "language", "source-map"]

# Categories
categories = ["development-tools", "parsing"]

# Links
homepage      = "https://github.com/jamesgober/source-lang"
repository    = "https://github.com/jamesgober/source-lang"
documentation = "https://docs.rs/source-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "source_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
std = ["span-lang/std"]
# Serialization support.
serde = ["dep:serde", "span-lang/serde"]


# DEPENDENCIES
# #################################
[dependencies]
# Positions and spans: the per-buffer coordinate substrate this crate maps over.
span-lang = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
